--- a/pom.xml
+++ b/pom.xml
@@ -19,19 +19,12 @@
     <description>校园智能垃圾分类系统</description>
 
     <properties>
-        <java.version>17</java.version> <!-- 建议使用 Java 17，Spring Boot 2.7.x 推荐 -->
-        <!-- 删除 mysql.version，让 Spring Boot 管理版本 -->
+        <java.version>17</java.version>
         <fastjson.version>2.0.39</fastjson.version>
         <hutool.version>5.8.22</hutool.version>
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,7 +40,6 @@
         </dependency>
         
         <!-- 数据库 -->
-        <!-- 关键修复：使用正确的 MySQL 依赖坐标 -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -85,7 +77,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.16.11</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -93,7 +92,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <!-- 明确指定主类，解决多个主类问题 -->
                     <mainClass>com.zjfc.smartgarbage.SmartGarbageApplication</mainClass>
                     <excludes>
                         <exclude>
@@ -103,7 +101,6 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!-- 添加编译插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -112,6 +109,17 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <plugin>
+            <groupId>com.github.ferstl</groupId>
+            <artifactId>depgraph-maven-plugin</artifactId>
+            <version>4.0.2</version>
+            <configuration>
+                <outputDirectory>${project.basedir}/docs</outputDirectory>
+                <outputFileName>dependency-graph.png</outputFileName>
+                <showVersions>false</showVersions>
+                <showGroupIds>false</showGroupIds>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 </project>
